--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -36,18 +36,82 @@ section {
             display: flex;
             flex-direction: column;
             gap: 4em;
+            height: 100%;
             width: 80%;
 
             .kanban-form {
                 display: flex;
                 flex-direction: column;
+                justify-content: space-around;
                 width: 100%;
                 gap: 30px;
-                bottom: 2.5em;
+                height: 100%;
 
-                h1 {
-                    bottom: 1.5em;
-                    font-size: 6em;
+
+                // bottom: 2.5em;
+                .without-required {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    width: 100%;
+                    height: 100%;
+
+                    h1 {
+                        // bottom: 1.5em;
+                        font-size: 6em;
+                    }
+
+                    .form-input-content {
+                        height: 50dvh;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-around;
+                    }
+
+                    .div-cont {
+                        display: flex;
+                        flex-direction: column;
+                        min-height: 64px;
+
+
+
+                        input,
+                        textarea {
+                            min-height: 48px;
+                            border-radius: 15px;
+                            padding: 0.5em;
+                            font-size: 16px;
+                            resize: none;
+                            border: 2px solid rgba(0, 0, 0, 0.049);
+
+
+
+                            &:focus {
+                                border: 2px solid #29abe2;
+                            }
+                        }
+
+                        textarea {
+                            min-height: 64px;
+                            height: 16dvh;
+                        }
+
+                        span {
+                            color: rgba(0, 0, 0, 0.746);
+                            font-size: 1.6em;
+                        }
+                    }
+
+                    .form-label {
+                        font-size: 1.6em;
+
+                        .required-asterisk {
+                            color: red;
+                            margin-right: 1em;
+                        }
+                    }
+
+
                 }
 
                 .form-label {
@@ -61,37 +125,10 @@ section {
 
                 .required-label {
                     font-size: 1.6em;
-                    top: 10em;
+                    margin-bottom: 8dvh;
+                    // top: 10em;
                 }
 
-                .div-cont {
-                    display: flex;
-                    flex-direction: column;
-                    min-height: 64px;
-
-                    input,
-                    textarea {
-                        min-height: 48px;
-                        border-radius: 15px;
-                        padding: 0.5em;
-                        font-size: 16px;
-                        resize: none;
-                        border: 2px solid rgba(0, 0, 0, 0.049);
-
-                        &:focus {
-                            border: 2px solid #29abe2;
-                        }
-                    }
-
-                    textarea {
-                        height: 84px;
-                    }
-
-                    span {
-                        color: rgba(0, 0, 0, 0.746);
-                        font-size: 1.6em;
-                    }
-                }
             }
         }
     }
@@ -131,7 +168,7 @@ section {
         display: flex;
         flex-direction: column;
         width: 80%;
-        top: 8em;
+        // top: 5em;
 
         .kanban-addtask-priority {
             width: 100%;
@@ -151,10 +188,12 @@ section {
                     background-color: #ff3d00;
                     color: white;
                 }
+
                 .active-medium {
                     background-color: #ffa800;
                     color: white;
                 }
+
                 .active-low {
                     background-color: #7ae229;
                     color: white;
@@ -268,7 +307,7 @@ section {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                
+
 
                 .input-subtask {
                     width: 100%;
@@ -335,78 +374,78 @@ section {
 }
 
 // -------- Other Components ----------
-    .contact-list-content {
-        display: flex;
-        height: 90%;
+.contact-list-content {
+    display: flex;
+    height: 90%;
+}
+
+.contact-list-component {
+    display: flex;
+    height: auto;
+
+    @media (max-width: 750px) {
+        width: 100%;
     }
 
-    .contact-list-component {
+    @media (min-width: 750px) {
         display: flex;
-        height: auto;
-
-        @media (max-width: 750px) {
-            width: 100%;
-        }
-
-        @media (min-width: 750px) {
-            display: flex;
-        }
     }
+}
 
-    .hidden {
+.hidden {
+    display: none;
+}
+
+.info-screen-component {
+    height: auto;
+    width: 100%;
+
+    @media (max-width: 750px) {
         display: none;
     }
+}
 
-    .info-screen-component {
-        height: auto;
-        width: 100%;
+.app-info-screen-mobile-component {
+    width: 100%;
 
-        @media (max-width: 750px) {
-            display: none;
-        }
-    }
-
-    .app-info-screen-mobile-component {
-        width: 100%;
-
-        @media (min-width: 750px) {
-            display: none;
-        }
-    }
-
-    input[type="number"]::-webkit-inner-spin-button,
-    input[type="number"]::-webkit-outer-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-    }
-
-    input[type="number"] {
-        appearance: textfield;
-    }
-
-    .createdContact {
-        z-index: 4;
-        width: 15em;
-        height: 4em;
-        position: fixed;
-        top: 80%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+    @media (min-width: 750px) {
         display: none;
-        justify-content: center;
-        align-items: center;
-        font-size: 16px;
-        border-radius: 14px;
-        border: 1px solid black;
-        background-color: #2a3647;
-        color: white;
-        box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
-        animation: fade-in-left-overlay-viewport 2s ease-in-out;
     }
+}
 
-    .display {
-        display: flex;
-    }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    appearance: textfield;
+}
+
+.createdContact {
+    z-index: 4;
+    width: 15em;
+    height: 4em;
+    position: fixed;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    border-radius: 14px;
+    border: 1px solid black;
+    background-color: #2a3647;
+    color: white;
+    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
+    animation: fade-in-left-overlay-viewport 2s ease-in-out;
+}
+
+.display {
+    display: flex;
+}
 
 
 
@@ -452,7 +491,7 @@ section {
 }
 
 .errorborder {
-    border: 2px solid red!important;
+    border: 2px solid red !important;
 }
 
 .invalid-input {
