Add mobile overlay and improve debug logging in card component
Introduced an overlay-for-mobile div for better mobile UI support and updated the debug method to log the task id. Also added related styles for the overlay.

--- a/src/app/kanban/kanban-board/card/card.component.html
+++ b/src/app/kanban/kanban-board/card/card.component.html
@@ -1,8 +1,11 @@
 <section>
+  <div class="overlay-for-mobile">
   <div class="testcontainer">
     <div class="category-moveto">
     <div class="category {{task.category?.toLowerCase()?.replace(' ', '-')}}">{{task.category}} </div>
-<div class="move-to-mobile" (click)="debug()"> <img src="../../../../../assets/img/kanban-board/mobileMoveToButton.png" alt=""></div>
+    <div class="move-to-mobile" (click)="debug(); $event.stopPropagation()">
+      <img src="../../../../../assets/img/kanban-board/mobileMoveToButton.png" alt="">
+    </div>
     </div>
     <div class="tite">
       <h4>{{task.title}}</h4>
@@ -36,5 +39,6 @@
       </div>
 
     </div>
+  </div>
   </div>
 </section>
