--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.html
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.html
@@ -28,7 +28,7 @@
 						<label class="form-label">
 							Due date<span class="required-asterisk">*</span>
 						</label>
-						<input [(ngModel)]="taskList.dueDate" type="date" name="dueDate" required #dueDate="ngModel"
+						<input [(ngModel)]="taskList.dueDate" class = "input-date" type="date" name="dueDate" required #dueDate="ngModel"
 							[class.errorborder]="!dueDate.valid && dueDate.touched" />
 					</div>
 					<div class="invalid-input">
