--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -76,6 +76,9 @@
                             } 
                         </mat-select>
                     </div>
+                    <div class="already-assigned">@for (assigned of task.assignedTo; track $index) {
+                    <div id={{$index}} class="select-initials" [style.background]="assigned.color">{{assigned.initials}}</div>              
+                    }</div>
                 </div>
 
                 <div class="kanban-overlay-subtask">
