--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -154,7 +154,7 @@
                                     </div>
 
                                     <div class="each-sub-task">
-                                        <button class="clear">
+                                        <button class="clear" (click)="resetForm()">
                                             Clear
                                             <svg width="32" height="32" viewBox="0 0 32 32" fill="currentColor"
                                                 xmlns="http://www.w3.org/2000/svg">
