--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -16,22 +16,22 @@
 
 section {
     font-size: 10px;
-    @media(max-width:1280px){
+    @media (max-width: 1280px) {
         font-size: 9px;
-    }    
-    @media(max-width:1240px){
+    }
+    @media (max-width: 1240px) {
         font-size: 8px;
     }
-                @media(max-width:1040px){
-                font-size: 7px;
-            }
+    @media (max-width: 1040px) {
+        font-size: 7px;
+    }
 }
 
 .content {
     display: flex;
     width: 100%;
     height: 92dvh;
-    @media(max-width:750px){
+    @media (max-width: 750px) {
         flex-direction: column;
     }
 
@@ -42,9 +42,9 @@ section {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        @media(max-width:750px){
-                width: 100%;
-            }
+        @media (max-width: 750px) {
+            width: 100%;
+        }
 
         .left-content-wrapper {
             display: flex;
@@ -52,7 +52,7 @@ section {
             gap: 4em;
             height: 100%;
             width: 80%;
-            @media(max-width:1300px){
+            @media (max-width: 1300px) {
                 width: 90%;
             }
 
@@ -99,8 +99,6 @@ section {
                         flex-direction: column;
                         min-height: 64px;
 
-
-
                         input,
                         textarea {
                             min-height: 48px;
@@ -109,8 +107,6 @@ section {
                             font-size: 16px;
                             resize: none;
                             border: 2px solid rgba(0, 0, 0, 0.049);
-
-
 
                             &:focus {
                                 border: 2px solid #29abe2;
@@ -136,13 +132,10 @@ section {
                             margin-right: 1em;
                         }
                     }
-
-
                 }
 
                 .form-label {
                     font-size: 1.6em;
-
 
                     .required-asterisk {
                         color: red;
@@ -155,7 +148,6 @@ section {
                     margin-bottom: 8dvh;
                     // top: 10em;
                 }
-
             }
         }
     }
@@ -170,7 +162,7 @@ section {
     height: 50dvh;
     background-color: rgba(0, 0, 0, 0.049);
     margin: 0px 2px;
-    @media(max-width:750px){
+    @media (max-width: 750px) {
         display: none;
     }
 }
@@ -193,9 +185,9 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-            @media(max-width:750px){
-                width: 100%;
-            }
+    @media (max-width: 750px) {
+        width: 100%;
+    }
 
     .right-content-wrapper {
         display: flex;
@@ -240,9 +232,9 @@ section {
                     border: solid rgba(0, 0, 0, 0.049) 2px;
                     border-radius: 10px;
                     font-size: 2em;
-                    padding:0.7em 1em;
+                    padding: 0.7em 1em;
                     transition: box-shadow 0.3s ease;
-                    @media(max-width:390px){
+                    @media (max-width: 390px) {
                         font-size: 0px;
                         height: 44px;
                         width: 60px;
@@ -250,7 +242,6 @@ section {
 
                     img {
                         width: 24px;
-                        
                     }
 
                     &:hover {
@@ -382,7 +373,6 @@ section {
 
                         &:hover {
                             background-color: rgba(0, 0, 0, 0.091);
-
                         }
                     }
                 }
@@ -408,14 +398,47 @@ section {
                     background-color: transparent;
                     border: solid rgba(0, 0, 0, 0.049) 2px;
                     border-radius: 10px;
-                    margin-bottom: 3em;
-                    border: 2px solid rgba(0, 0, 0, 0.049);
+                    font-size: 1.8em;
+                    padding: 8px 10px;
+                    transition: box-shadow 0.3s ease;
+
+                    img {
+                        margin-left: 0.5em;
+                    }
+
+                    &:hover {
+                        color: #29abe2;
+                        border: 2px #29abe2 solid;
+                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                    }
+                }
+
+                .create-task {
+                    color: white;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #2a3647;
+                    border: solid rgba(0, 0, 0, 0.049) 2px;
+                    border-radius: 10px;
+                    font-size: 1.8em;
+                    padding: 10px 18px;
+                    transition: box-shadow 0.3s ease;
+
+                    img {
+                        margin-left: 0.5em;
+                    }
+
+                    &:hover {
+                        background-color: #29abe2;
+                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                    }
                 }
             }
             .form-label-r {
                 display: none;
                 font-size: 2.6em;
-                @media(max-width:750px){
+                @media (max-width: 750px) {
                     display: block;
                 }
                 .required-asterisk {
@@ -493,111 +516,108 @@ section {
         }
     }
 
-
-
-// -------- Other Components ----------
-.contact-list-content {
-    display: flex;
-    height: 90%;
-}
-
-.contact-list-component {
-    display: flex;
-    height: auto;
-
-    @media (max-width: 750px) {
-        width: 100%;
+    // -------- Other Components ----------
+    .contact-list-content {
+        display: flex;
+        height: 90%;
     }
 
-    .info-screen-component {
+    .contact-list-component {
+        display: flex;
         height: auto;
-        width: 100%;
 
         @media (max-width: 750px) {
-            display: none;
+            width: 100%;
         }
-    }
 
-    .app-info-screen-mobile-component {
-        width: 100%;
+        .info-screen-component {
+            height: auto;
+            width: 100%;
 
-        @media (min-width: 750px) {
-            display: none;
+            @media (max-width: 750px) {
+                display: none;
+            }
         }
-    }
 
-    input[type="number"]::-webkit-inner-spin-button,
-    input[type="number"]::-webkit-outer-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-    }
+        .app-info-screen-mobile-component {
+            width: 100%;
 
-    input[type="number"] {
-        appearance: textfield;
-    }
+            @media (min-width: 750px) {
+                display: none;
+            }
+        }
 
-    .createdContact {
-        z-index: 4;
-        width: 15em;
-        height: 4em;
-        position: fixed;
-        top: 80%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        display: none;
-        justify-content: center;
-        align-items: center;
-        font-size: 16px;
-        border-radius: 14px;
-        border: 1px solid black;
-        background-color: #2a3647;
-        color: white;
-        box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
-        animation: fade-in-left-overlay-viewport 2s ease-in-out;
-    }
+        input[type="number"]::-webkit-inner-spin-button,
+        input[type="number"]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
 
-    .display {
-        display: flex;
-    }
+        input[type="number"] {
+            appearance: textfield;
+        }
 
-    input[type="number"] {
-        appearance: textfield;
-    }
+        .createdContact {
+            z-index: 4;
+            width: 15em;
+            height: 4em;
+            position: fixed;
+            top: 80%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            border-radius: 14px;
+            border: 1px solid black;
+            background-color: #2a3647;
+            color: white;
+            box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
+            animation: fade-in-left-overlay-viewport 2s ease-in-out;
+        }
 
-    .createdContact {
-        z-index: 4;
-        width: 15em;
-        height: 4em;
-        position: fixed;
-        top: 80%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        display: none;
-        justify-content: center;
-        align-items: center;
-        font-size: 16px;
-        border-radius: 14px;
-        border: 1px solid black;
-        background-color: #2a3647;
-        color: white;
-        box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
-        animation: fade-in-left-overlay-viewport 2s ease-in-out;
-    }
+        .display {
+            display: flex;
+        }
 
-    .display {
-        display: flex;
-    }
+        input[type="number"] {
+            appearance: textfield;
+        }
 
+        .createdContact {
+            z-index: 4;
+            width: 15em;
+            height: 4em;
+            position: fixed;
+            top: 80%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            border-radius: 14px;
+            border: 1px solid black;
+            background-color: #2a3647;
+            color: white;
+            box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
+            animation: fade-in-left-overlay-viewport 2s ease-in-out;
+        }
 
+        .display {
+            display: flex;
+        }
 
-    .errorborder {
-        border: 2px solid red !important;
-    }
+        .errorborder {
+            border: 2px solid red !important;
+        }
 
-    .invalid-input {
-        height: 10px;
-        font-size: 12px;
-        color: red;
+        .invalid-input {
+            height: 10px;
+            font-size: 12px;
+            color: red;
+        }
     }
 }
 
