update example category

--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -125,7 +125,7 @@
                             </div>
                             <div class="invalid-input">
                                 @if (!category.valid && category.touched) {
-                                <div>Example: Title example</div>
+                                <div>Example: Category example</div>
                                 }
                             </div>
                             <!-- Subtask Section -->
