--- a/src/app/kanban/kanban.component.scss
+++ b/src/app/kanban/kanban.component.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    background: #f0f0f0;
 }
 
 .kanban-board-content {
@@ -21,8 +22,9 @@
     padding: 0em 4em;
     background: #f0f0f0;
     overflow-y: auto;
+    max-width: (1920px - 230px);
 
-        @media (max-width:965px) {
+    @media (max-width:965px) {
         padding: 0px 10px;
     }
 }
@@ -89,6 +91,6 @@ input[type="number"] {
     box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
 }
 
-.display{
+.display {
     display: flex;
 }
