--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,7 +1,9 @@
 section {
     font-size: 10px;
     height: 8dvh;
+    background: white;
     box-shadow: 0 0.6em 0.6em -0.2em rgba($color: #000000, $alpha: 0.2);
+    z-index: 10;
 
     .content {
         width: 100%;
