--- a/src/app/kanban/kanban-board/kanban-board.component.html
+++ b/src/app/kanban/kanban-board/kanban-board.component.html
@@ -6,7 +6,7 @@
         <input type="text" placeholder="Find Task" class="searchTitle" name="searchTitle" (keyup)="searchTasks()">
         <button class="search-button" (click)="searchTasks()">
           <div class="hyphen"></div>
-          <img src="../../../../assets/img/kanban-board/search.png" alt="Search" width="20">
+          <img src="assets/img/kanban-board/search.png" alt="Search" width="20">
         </button>
         <button class="add-task-button" (click)="boardService.toggleAddOverlay()">Add task +</button>
       </div>
@@ -22,7 +22,7 @@
         <input type="text" placeholder="Find Task" class="searchTitle" name="searchTitle" (keyup)="searchTasks()">
         <button class="search-button" (click)="searchTasks()">
           <div class="hyphen"></div>
-          <img src="../../../../assets/img/kanban-board/search.png" alt="Search" width="20">
+          <img src="assets/img/kanban-board/search.png" alt="Search" width="20">
         </button>
       </div>
     </div>
