--- a/src/app/kanban/kanban-board/card/card.component.html
+++ b/src/app/kanban/kanban-board/card/card.component.html
@@ -16,7 +16,7 @@
     <div class="category-moveto">
       <div class="category {{task.category?.toLowerCase()?.replace(' ', '-')}}">{{task.category}} </div>
       <div class="move-to-mobile" (click)="openMobileOverlay($event);debug()">
-        <img src="../../../../../assets/img/kanban-board/mobileMoveToButton.png" alt="">
+        <img src="assets/img/kanban-board/mobileMoveToButton.png" alt="">
       </div>
     </div>
     <div class="tite">
