form validation text fixed

--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -21,7 +21,7 @@
                                     </div>
                                     <div class="invalid-input">
                                         @if (!title.valid && title.touched) {
-                                        <div>Example: Title example</div>
+                                        <div>This Field is required</div>
                                         }
                                     </div>
                                     <div class="form-description div-cont">
@@ -39,7 +39,7 @@
                                     </div>
                                     <div class="invalid-input">
                                         @if (!dueDate.valid && dueDate.touched) {
-                                        <div>Example: Date example</div>
+                                        <div>This Field is required</div>
                                         }
                                     </div>
                                 </div>
@@ -125,7 +125,7 @@
                             </div>
                             <div class="invalid-input">
                                 @if (!category.valid && category.touched) {
-                                <div>Example: Category example</div>
+                                <div>This Field is required</div>
                                 }
                             </div>
                             <!-- Subtask Section -->
