--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.html
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.html
@@ -14,7 +14,7 @@
 					</div>
 					<div class="invalid-input">
 						@if (!title.valid && title.touched) {
-						<div>Example: Title example</div>
+						<div>This Field is required</div>
 						}
 					</div>
 					<div class="form-description div-cont">
@@ -33,7 +33,7 @@
 					</div>
 					<div class="invalid-input">
 						@if (!dueDate.valid && dueDate.touched) {
-						<div>Example: Date example</div>
+						<div>This Field is required</div>
 						}
 					</div>
 				</form>
@@ -115,7 +115,7 @@
 				</div>
 				<div class="invalid-input">
 					@if (!category.valid && category.touched) {
-					<div>Example: Title example</div>
+					<div>This Field is required</div>
 					}
 				</div>
 				<!-- Subtask Section -->
