--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
@@ -29,7 +29,15 @@ section {
             height: 80%;
             width: 80%;
 
-            .kanban-form {
+
+            .without-required {
+                _display: flex;
+                _flex-direction: column;
+                _justify-content: space-evenly;
+                width: 100%;
+                height: 100%;
+
+                .kanban-form {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
@@ -88,6 +96,8 @@ section {
                     }
                 }
             }
+            }
+            
         }
     }
 }
