--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,3 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
 
 html {
@@ -30,6 +28,45 @@ html {
         left: -100%;
         transform: translate(-50%, -50%);
     }
+    .mat-mdc-option:focus.mdc-list-item,
+    .mat-mdc-option.mat-mdc-option-active.mdc-list-item {
+    display: flex;
+    flex-direction: row-reverse;
+    background-color: #2a3647;
+    color: white;
+
+    &:hover {
+        background-color: #091931;
+    }
+}
+
+.mat-mdc-option.mdc-list-item {
+    display: flex;
+    flex-direction: row-reverse;
+    background: white;
+
+    .select-initials {
+        width: 2em;
+        height: 2em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1em;
+        margin-right: 1em;
+        color: white;
+    }
+
+    &:hover {
+        background: #eeeeee;
+    }
+}
+
+.option-text {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+}
 }
 
 * {
@@ -226,3 +263,4 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
